schema/testdata/errors/operation_set_expression_unresolvable_lhs.keel
model Profile {
    fields {
        username Text @unique
    }

    actions {
        update createProfile(id) with (username) {
            //expect-error:25:26:AttributeExpressionError:undefined field 'identit'
            @set(profile.identit = ctx.identity)
        }
    }
}
